Black Friday and cleanup

--- a/16bit/16bit_writeup.ipynb
+++ b/16bit/16bit_writeup.ipynb
@@ -6,9 +6,20 @@
    "source": [
     "# 16-bit\n",
     "**Challenge Description**\n",
+    "\n",
     "During the ICC competition we where given a shellcoding challenge to make a base64 encoded shellcode, ie the shellcode could only consist of the characters \"a-zA-Z0-9+/=\", during an 8 hour ctf we completed it in about 1.5 hours. How long will it take you to create base16 shellcode?\n",
     "\n",
     "0.cloud.chals.io:23261"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acknowledgements\n",
+    "In making this writeup we took inspiration and understanding from the following two writeups, combining some of their methods and techniques to make the best solution we could.\n",
+    "* https://ctftime.org/writeup/34601 by knittingirl - Used smaller first stage 8-byte shellcode\n",
+    "* https://ctftime.org/writeup/34583 by Ratman - Inspiration for creating arbitrary al values, writing to shellcode area pointed to by rdx\n"
    ]
   },
   {
@@ -59,6 +70,7 @@
     "## Reversing\n",
     "We open up the challenge in IDA to take a look at what the program is doing. Fortunately the program is fairly short and to the point.\n",
     "![image.png](attachment:image.png)\n",
+    "\n",
     "The program creates a 4096-byte RWX section using mmap - a perfect place to execute shellcode!\n",
     "It then reads in 100 bytes into this section from stdin, runs an encode function on the buffer, and then executes the buffer.\n",
     "Looks like a shellcoding challenge is here!"
@@ -74,7 +86,9 @@
    "metadata": {},
    "source": [
     "Lets take a look into the encode function to see how it modifies the input we give to the program.\n",
+    "\n",
     "![image.png](attachment:image.png)\n",
+    "\n",
     "First it copies the 100 bytes we gave into a temorary buffer located on the stack.\n",
     "Then for every byte, it takes the byte splits it into two bytes based on the value of each nibble in the byte (upper and lower 4 bits of the byte)."
    ]
@@ -88,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The lookup table \"pos\" is defined with all possible hex characters\n",
+    "The lookup table \"pos\" is defined with all possible hex characters, using uppercase letters.\n",
     "![image.png](attachment:image.png)"
    ]
   },
@@ -98,16 +112,16 @@
    "source": [
     "This means that each byte will be transformed into two bytes that are of hex string value.\n",
     "\n",
-    "For example, the byte 0x89 is split into nibbles 8 and 9, and then converted into the two byte paring 0x3839\n",
+    "For example, the byte 0x89 is split into nibbles 8 and 9, and then converted into the two byte paring 0x3839, which in ASCII is the literal string `89`.\n",
     "\n",
-    "So our executed shellcode will only contain the bytes 0x30-0x39,0x41-0x46 - This is a pretty restricted set!"
+    "So our executed shellcode will only contain the bytes 0x30-0x39,0x41-0x46 -- This is a pretty restricted set!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General Strategy for restricted shellcoding\n",
+    "## General Strategy for Restricted Shellcoding\n",
     "The basic strategy employed for pwning a restricted shellcoding challenge is as follows:\n",
     "1. Discover what opcodes are possible to use\n",
     "1. Check what the inital register values are when you enter the shellcode\n",
@@ -123,8 +137,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Discovering what opcodes we _can_ use\n",
-    "So now that we know what bytes are acceptable, we can generate the list of possible opcodes that we can use - We check up to 3 byte opcodes using the following script:"
+    "## 1. Discovering what opcodes we _CAN_ use\n",
+    "So now that we know what bytes are acceptable, we can generate the list of possible opcodes that we can use - We check up to 3 byte opcodes using the following snippets:"
    ]
   },
   {
@@ -244,8 +258,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Possibly Useful 3 byte opcodes\n",
-    "    Where XX is a valid immediate (0x30-0x39,0x41-0x46) and REG is a a valid immediate (0x30-0x39,0x41-0x46) corresponding to a register (rcx, rbx, r8,r9)\n",
+    "    Possibly Useful 3 byte opcodes where:\n",
+    "    XX is a valid immediate (0x30-0x39,0x41-0x46) \n",
+    "    REG is a a valid immediate (0x30-0x39,0x41-0x46) corresponding to a register (rcx, rbx, r8,r9)\n",
     "    0:   30 41 XX                xor    BYTE PTR [rcx+0xXX], al\n",
     "    0:   30 42 XX                xor    BYTE PTR [rdx+0xXX], al\n",
     "    0:   30 43 XX                xor    BYTE PTR [rbx+0xXX], al\n",
@@ -280,9 +295,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that rax and rsi points to the start of our shellcode buffer and rdx points to the end of the shellcode that was read in. rbx points to an offset of `__libc_csu_init` which is a function in the challenge program. rdi points to a buffer containing our unencoded input stored on the stack (side effect of the encode function).\n",
+    "Here we see that rax and rsi registers point to the start of our shellcode buffer and rdx points to the end of the inital shellcode area. rbx points to an offset of `__libc_csu_init` which is a function in the challenge program. rdi points to a buffer containing our unencoded input stored on the stack (a side effect of the encode function).\n",
     "\n",
-    "Important note here is that al will always start at 0, as al is one of the registers we are able to control with our available opcodes"
+    "An important note here is that al (the lowest byte of rax) will always start at 0, as al is one of the registers we are able to control with our available opcodes."
    ]
   },
   {
@@ -302,7 +317,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The other al xor option mentioned was the three byte opcodes which will xor a value pointed to at an offset of one of the registers. The most useful one is `xor al, BYTE PTR [rbx+0xXX]` which will xor into al a value offset from rbx, which is a constant offset into our own program. The values at those location are listed here:\n",
+    "The other xor opcodes affecting the al register are the three byte opcodes which xor a value pointed to at an offset of one of the other registers. The most useful one is `xor al, BYTE PTR [rbx+0xXX]` which will xor into al a value offset from rbx.\n",
+    "\n",
+    "We mentioned before that rbx points to a the function `__libc_csu_init`. This is useful because the data in that location will not change between executions, therefore we can use those values as well for crafting al.\n",
+    "\n",
+    "The values at those location are listed here:\n",
     "![image.png](attachment:image.png)\n",
     "Here we have values that include the highest bit set, so we are now able to, using a combination of values, put any byte value 0x00-0xff into al."
    ]
@@ -320,13 +339,13 @@
    "source": [
     "## 4. Using restricted shellcode to write unrestricted shellcode\n",
     "### Target Shellcode\n",
-    "We have 10 bytes of shellcode to work with, so we use option B, reading in more shellcode. In order to execute the read syscall, we need the following based on standard calling conventions\n",
-    "rax = 0 (for the read syscall)\n",
-    "rdi = 0 (read from stdin fd)\n",
-    "rsi = output buffer \n",
-    "rdx = read input length (must be positive)\n",
+    "We have 10 bytes of shellcode to work with, so we use option B, reading in more shellcode. In order to execute the read syscall, we need the following based on standard calling conventions for x86_64:\n",
+    "* rax = 0 (for the read syscall)\n",
+    "* rdi = 0 (read from stdin fd)\n",
+    "* rsi = output buffer \n",
+    "* rdx = read input length (must be greater than length of shellcode)\n",
     "\n",
-    "Luckily some of those values are already set, rsi already points to the start of our shellcode segment, so we can read to there, and rdx already points to a stack address, which will always be a large positive. Therefore all we must do is set rax and rdi to 0 (using xor for shorter opcodes) and then do a syscall. The target shellcode therefore is as follows:"
+    "Luckily some of those values are already set, rsi already points to the start of our shellcode segment, so we can read into there, and rdx already points to a stack address, which is a large value (much greater than our shellcode length). Therefore all we must do is set rax and rdi to 0 (using xor for shorter opcodes) and then do a syscall. The target shellcode therefore is as follows:"
    ]
   },
   {
@@ -381,7 +400,6 @@
     "csu_init_vals = [0x03,0x74,0x1b,0x31,0xdb,0x0f,0x1f,0x00,0x4c,0x89,0x41,0xff,0x14,0xdf,0x48,0x83]\n",
     "primitive_vals = immediate_vals + csu_init_vals\n",
     "\n",
-    "#theoretically three xors should get us almost everywhere, so lets just test that.\n",
     "xor_dict = {}\n",
     "for i in primitive_vals:\n",
     "    xor_dict[i] = [i]\n",
@@ -391,7 +409,6 @@
     "    for test_1 in xor_dict.keys():\n",
     "        for test_2 in xor_dict.keys():\n",
     "            if not test_1 ^ test_2 in xor_dict:\n",
-    "                #print(test_1 ^ test_2,test_1,test_2,values)\n",
     "                new_xors[test_1 ^ test_2] = xor_dict[test_1] + xor_dict[test_2]\n",
     "    #join the values and new_values together\n",
     "    xor_dict = {**xor_dict,**new_xors}\n",
@@ -403,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see that all 256 possible values can be created as a combination of 1-4 xors. In order to convert from desired value into the series of required xor opcodes, we have the following mapping and function:"
+    "Here we can see that all 256 possible values can be created as a combination of 1-4 xors. In order to convert from desired value into the series of required xor opcodes, we have the following dictionary mapping and generator function:"
    ]
   },
   {
@@ -446,7 +463,7 @@
    "metadata": {},
    "source": [
     "### Put together the shellcode\n",
-    "Now we put together the function which generates shellcode for setting al and putting the values into the offset of rdx"
+    "Now we put together the function which generates shellcode for setting al and placing the values into the offsets of rdx."
    ]
   },
   {
