--- a/major_malfunction/major_malfunction_writeup.ipynb
+++ b/major_malfunction/major_malfunction_writeup.ipynb
@@ -5,9 +5,17 @@
    "metadata": {},
    "source": [
     "# Major Malfunction\n",
-    "**challenge description**\n",
+    "**Challenge Description**\n",
     "\n",
     "Our team noticed that some adversaries have been trading music recommendations once a week at the exact same time for the last several months. While the recommendations do sound like music, one of our guys thought something seemed off about all of them and it was worth further investigation. Attached is a .mid version of the song, where another one of our analysts have removed anything that could be ruled out as not being part of a message. Can you figure out what the secret message is?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acknowledgements\n",
+    "In the making of this writeup, we made use of information disclosed by the challenge author in Discord after the CTF event concluded."
    ]
   },
   {
@@ -257,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +417,7 @@
        " 12]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +587,7 @@
        " 0]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,12 +602,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have all of the note values, we can consider how to interpret this into ascii text to obtain the flag. Notice that all the values are from 0-6 which is base 7, so we can try to convert from base 7 into ascii"
+    "Now that we have all of the note values, we can consider how to interpret this into ascii text to obtain the flag. Notice that all the values are from 0-6 which is base 7, so we can try to convert from base 7 into ascii."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +616,7 @@
        "b'uscg{b9e87122589167966989853582e619906bb24648}'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
